--- a/submit/index.html
+++ b/submit/index.html
@@ -1114,25 +1114,28 @@
         various downstream tasks, requiring only minimal task-specific
         modifications. For example, the TURL framework can be used to infer
         valuable information about tables such as column types and the
-        relationships between columns (CTA and CPA). The framework, as shown in <a id="Fig2">Figure 2</a>,is composed of three main components: an embedding layer that first converts input
-        tables into embeddings, an N-stacked aware transformer layer that
-        attends over these embeddings to capture useful information, and a
-        projection layer for pre-training objectives. In addition to a Masked
-        Language Model (MLM) used by standard BERT language model [<a
-          href="#toc22"
-          >14</a
-        >] that can learn representations for tokens in table metadata, TURL
-        proposes a Masked Entity Recovery (MER) objective to learn entity cell
-        representations. Lastly, to perform the pre-training, TURL leverages a
-        pre-trained TinyBERT model [<a href="#toc27">19</a>] and pre-trained the
-        model for 80 epochs.
+        relationships between columns (CTA and CPA). The framework, as shown in
+        <a id="Fig2">Figure 2</a>,is composed of three main components: an
+        embedding layer that first converts input tables into embeddings, an
+        N-stacked aware transformer layer that attends over these embeddings to
+        capture useful information, and a projection layer for pre-training
+        objectives. In addition to a Masked Language Model (MLM) used by
+        standard BERT language model [<a href="#toc22">14</a>] that can learn
+        representations for tokens in table metadata, TURL proposes a Masked
+        Entity Recovery (MER) objective to learn entity cell representations.
+        Lastly, to perform the pre-training, TURL leverages a pre-trained
+        TinyBERT model [<a href="#toc27">19</a>] and pre-trained the model for
+        80 epochs.
       </p>
 
       <span id="toc3.2.Fig"></span>
       <figure>
-        <img src="images/TURL.PNG" alt="TURL" class="center"/>
+        <img src="images/TURL.PNG" alt="TURL" class="center" />
         <figcaption class="center">
-          <b><a id="Fig2"></a>Figure 2:</b> Overview of TURL framework [<a href="#toc12">4</a>]
+          <b><a id="Fig2"></a>Figure 2:</b> Overview of TURL framework [<a
+            href="#toc12"
+            >4</a
+          >]
         </figcaption>
       </figure>
 
@@ -1150,28 +1153,43 @@
 
       <span id="toc3.4"></span>
       <h3>3.4 DODUO</h3>
-      <p>   
-      	DODUO, as described in [<a href="#toc15">7</a>], is the curent
-      state-of-the-art approach for the CTA and CPA tasks. This approach
-      utilizes a Transformer-based language model and takes the entire table as
-      input to predict column types and relationships between columns. What sets
-      DODUO apart to its predecessors is its ability to annotate table columns using only the
-      information contained in the table itself, without the need for external
-      knowledge or context.
- 	    </p>
-      
       <p>
-        As shown in <a id="Fig3">Figure 3</a>, DODUO utilizes a pre-trained Transformer-based language model, particularly a BERT language model [<a href="#toc22">14</a>] and adopts multi-task learning into the model to "transfer" shared knowledge between CTA and CPA tasks. DODUO introduces table-wise serialization to incorporate table context into prediction. Particularly, the serialization method is: for a table of N columns of m rows, 
+        DODUO, as described in [<a href="#toc15">7</a>], is the curent
+        state-of-the-art approach for the CTA and CPA tasks. This approach
+        utilizes a Transformer-based language model and takes the entire table
+        as input to predict column types and relationships between columns. What
+        sets DODUO apart to its predecessors is its ability to annotate table
+        columns using only the information contained in the table itself,
+        without the need for external knowledge or context.
+      </p>
+
+      <p>
+        As shown in <a id="Fig3">Figure 3</a>, DODUO utilizes a pre-trained
+        Transformer-based language model, particularly a BERT language model [<a
+          href="#toc22"
+          >14</a
+        >] and adopts multi-task learning into the model to "transfer" shared
+        knowledge between CTA and CPA tasks. DODUO introduces table-wise
+        serialization to incorporate table context into prediction.
+        Particularly, the serialization method is: for a table of N columns of m
+        rows,
         <span class="math display"
-          >\[serialize(T)::= [CLS]\;v^1_1\;...[CLS]\; v^1_n...v^n_m\;[SEP]\]</span
-        > where a [CLS] token is appended to the beginning of each column, which its corresponding embeddings represent learned column representations for the column. The output layer on top of a column embedding, i.e. the [CLS] token, is used for the CTA task. Column embeddings of a column pair is used for the CPA task instead.
+          >\[serialize(T)::= [CLS]\;v^1_1\;...[CLS]\;
+          v^1_n...v^n_m\;[SEP]\]</span
+        >
+        where a [CLS] token is appended to the beginning of each column, which
+        its corresponding embeddings represent learned column representations
+        for the column. The output layer on top of a column embedding, i.e. the
+        [CLS] token, is used for the CTA task. Column embeddings of a column
+        pair is used for the CPA task instead.
       </p>
 
       <span id="toc3.4.Fig"></span>
       <figure>
         <img src="images/DODUO.PNG" alt="DODUO" class="center" />
         <figcaption class="center">
-          <b><a id="Fig3"></a>Figure 3:</b> Overview of DODUO's model architecture [<a href="#toc15">7</a>]
+          <b><a id="Fig3"></a>Figure 3:</b> Overview of DODUO's model
+          architecture [<a href="#toc15">7</a>]
         </figcaption>
       </figure>
 
@@ -1202,8 +1220,7 @@
       <figure>
         <img src="images/TaBERT.JPG" alt="TaBERT framework" class="center" />
         <figcaption class="center">
-          <b><a id="Fig4"></a>Figure 4:</b> Overview of TaBERT [<a
-            href="#toc28"
+          <b><a id="Fig4"></a>Figure 4:</b> Overview of TaBERT [<a href="#toc28"
             >20</a
           >]
         </figcaption>
@@ -1316,8 +1333,9 @@
       <h2>4. Methodology</h2>
       <p>
         Chapter 4 describes the approaches introduced in this work. We give an
-        overview of data preprocessing and augmentations performed, followed
-        by serialization methods to account for table content, and hyperparameter tuning. 
+        overview of data preprocessing and augmentations performed, followed by
+        serialization methods to account for table content, and hyperparameter
+        tuning.
       </p>
       <span id="toc4.1"></span>
       <h3>4.1 Preprocessing and Augmentation</h3>
@@ -1372,20 +1390,23 @@
       <p>
         In this work, we employ two distinct serialization techniques -
         Neighboring Column serialization and TaBERT serialization. In the
-        following, we present an explanation of these techniques, followed by an example for both serialization as shown in <a id="Fig7">Figure 7</a>.
+        following, we present an explanation of these techniques, followed by an
+        example for both serialization as shown in <a id="Fig7">Figure 7</a>.
       </p>
 
       <p>
         <b>(i) Neighboring Column:</b> The
-        <em>Neighboring Column Serialization</em> technique, illustrated in <a id="Fig5">Figure 5</a>,  utilizes adjacent columns as local context in a relational table. Previous research by
-        SATO [<a href="#toc19">11</a>] demonstrated that incorporating local
-        context aids in resolving semantic type ambiguities in single-column
-        predictions. To accomplish this, their approach incorporates the
-        predicted semantic types of immediately adjacent columns as local
-        context for a column prediction model of neural network. For our
-        approach, we utilize neighboring columns of varying window sizes along
-        with the target column in the CTA task. Furthermore, for the CPA task,
-        we incorporate neighboring columns for both the main and target columns.
+        <em>Neighboring Column Serialization</em> technique, illustrated in
+        <a id="Fig5">Figure 5</a>, utilizes adjacent columns as local context in
+        a relational table. Previous research by SATO [<a href="#toc19">11</a>]
+        demonstrated that incorporating local context aids in resolving semantic
+        type ambiguities in single-column predictions. To accomplish this, their
+        approach incorporates the predicted semantic types of immediately
+        adjacent columns as local context for a column prediction model of
+        neural network. For our approach, we utilize neighboring columns of
+        varying window sizes along with the target column in the CTA task.
+        Furthermore, for the CPA task, we incorporate neighboring columns for
+        both the main and target columns.
       </p>
       <p>
         To build on the Neighboring Column Serialization approach, we introduce
@@ -1401,9 +1422,12 @@
         syntax summary for lengthy columns/tables as part of the local context.
       </p>
       <p>
-        However, for the CPA task, incorporating neighboring columns for both the main and target columns translates to doubling the number of total columns included in the serialization as compared to CTA. Therefore, we transfer the Neighboring
-        Column Serialization technique from the CTA task to the CPA task,
-        without including the main column, which we refer to as the
+        However, for the CPA task, incorporating neighboring columns for both
+        the main and target columns translates to doubling the number of total
+        columns included in the serialization as compared to CTA. Therefore, we
+        transfer the Neighboring Column Serialization technique from the CTA
+        task to the CPA task, without including the main column, which we refer
+        to as the
         <em>No-Main Neighboring Column Serialization</em>.
       </p>
 
@@ -1421,18 +1445,20 @@
       </figure>
 
       <p>
-        <b>(ii) TaBERT:</b> The <em>TaBERT Serialization</em>, illustrated in <a id="Fig6">Figure 6</a>, here uses the row-based idea from the thesis by Yin, P et al[<a href="#toc28">20</a>].
-        We implement the idea in a different way to solve our CTA/CPA task. Our
-        goal is to capture the relationship between the target column and the
-        context columns by inputting the context data row-wise. To achieve this,
-        we follow the approach proposed by TUTA [<a href="#toc16">8</a>], where
-        we prepend a data type token to each cell. This row serialization
-        approach helps the Transformer's attention mechanism better capture the
-        table structure while maintaining constant intervals for each column.
-        Moreover, by including data types, the language model can learn the
-        relationships between the cells of the target column and the prediction
-        label. For instance, a URL data for company, label, or hotel photos may
-        indicate a target label of "Logo".
+        <b>(ii) TaBERT:</b> The <em>TaBERT Serialization</em>, illustrated in
+        <a id="Fig6">Figure 6</a>, here uses the row-based idea from the thesis
+        by Yin, P et al[<a href="#toc28">20</a>]. To solve the CTA/CPA task, we
+        implement the idea in a different way. Our goal is to capture the
+        relationship between the target column and the context columns by
+        inputting the context data row-wise. To achieve this, we follow the
+        approach proposed by TUTA [<a href="#toc16">8</a>], where we prepend a
+        data type token to each cell. This row serialization approach helps the
+        Transformer's attention mechanism better capture the table structure
+        while maintaining constant intervals for each column. Moreover, by
+        including data types, the language model can learn the relationships
+        between the cells of the target column and the prediction label. For
+        instance, a URL data for company, label, or hotel photos may indicate a
+        target label of "Logo".
       </p>
       <p>
         To reduce the number of additional tokens required for inserting data
@@ -1467,7 +1493,8 @@
           class="center"
         />
         <figcaption class="center">
-          <b><a id="Fig7"></a>Figure 7:</b> Illustration of Different Serialization Methods
+          <b><a id="Fig7"></a>Figure 7:</b> Illustration of Different
+          Serialization Methods
         </figcaption>
       </figure>
 
@@ -1483,22 +1510,20 @@
       </p>
       <p>
         <b>RoBERTa</b> (Robustly Optimized BERT approach) is an improved version
-        of the BERT model that was proposed by Facebook AI <a href="#toc23"
-          >[15]</a
-        >.
-        RoBERTa is pre-trained on a massive amount of text data with longer
-        training times and larger batches than BERT, which improves its
-        performance in downstream NLP tasks.
+        of the BERT model that was proposed by Facebook AI
+        <a href="#toc23">[15]</a>. RoBERTa is pre-trained on a massive amount of
+        text data with longer training times and larger batches than BERT, which
+        improves its performance in downstream NLP tasks.
       </p>
       <p>
-        <b>LongFormer</b> Transformer-based models suffer from a
-        limitation when it comes to processing long sequences which is a challenge in table annotation where long texts need to be processed. While models such as BERT or RoBERTa [<a href="#toc22">14</a
-        >, <a href="#toc23">15</a>] are limited to a sequence length of 512, [<a
-          href="#toc21"
-          >13</a
-        >] proposes Longformer, which has a linear attention mechanism that can
-        process longer sequences length. The maximum length is constrained by
-        the memory of GPU.
+        <b>LongFormer</b> Transformer-based models suffer from a limitation when
+        it comes to processing long sequences which is a challenge in table
+        annotation where long texts need to be processed. While models such as
+        BERT or RoBERTa [<a href="#toc22">14</a>, <a href="#toc23">15</a>] are
+        limited to a sequence length of 512, [<a href="#toc21">13</a>] proposes
+        Longformer, which has a linear attention mechanism that can process
+        longer sequences length. The maximum length is constrained by the memory
+        of GPU.
       </p>
       <p>
         We further explore different experimental models for the CPA task in
@@ -1529,9 +1554,9 @@
       </p>
       <h3>4.4 Hyperparameter Tuning</h3>
       <p>
-        We conducted hyperparameter tunings for both CTA and CPA tasks to
-        investigate the impact of different window sizes for Neighboring Column
-        Serializations. We also experimented with different preprocessing
+        To investigate the impact of different window sizes for Neighboring
+        Column Serializations, we conduct hyperparameter tunings for both CTA
+        and CPA tasks. We also experimented with different preprocessing
         methods, such as TUTA, median, and mean preprocessing for each promising
         serialization. Additionally, we varied the proportions of the target
         column and local context <i>(MP - Main Percentange Ratio)</i> to assess
@@ -3913,13 +3938,16 @@
 
       <span id="toc6"></span>
       <h2>6. Discussion and Conclusion</h2>
-      This section is dedicated to the discussion of findings for the project. WE then conclude the project and provide potential implications for future
+      This section is dedicated to the discussion of findings for the project.
+      WE then conclude the project and provide potential implications for future
       research in the field of table annotation.
 
       <span id="toc6.1"></span>
       <h3>6.1 Discussion</h3>
       <p>
-        We draw inference on the discrepency of results on the SOTAB and WikiTable datasets, followed by our analysis on why Column-TaBERT serialization performed wose than its counterpart, TaBERT serialization. 
+        We draw inference on the discrepency of results on the SOTAB and
+        WikiTable datasets, followed by our analysis on why Column-TaBERT
+        serialization performed wose than its counterpart, TaBERT serialization.
       </p>
       <p><b>WikiTable dataset</b></p>
       <p>
