--- a/submit/index.html
+++ b/submit/index.html
@@ -845,11 +845,9 @@
         Chapter 2, we will provide an overview of the table annotation tasks.
         Subsequently, in Chapter 3, we will present the related work including,
         Transformer model. Moving on to Chapter 4, we will describe the models,
-        preprocessing steps, and serialization approaches. Additionally, in
-        Chapter 5, we will describe the experiment setup. Then, in Chapter 6, we
-        will delve into the experimental results and error analysis. Finally, in
-        Chapters 7 and 8, we will discuss the results and conclude the work,
-        respectively.
+        preprocessing steps, and serialization approaches and hyperparameter tuning. Additionally, in
+        Chapter 5, we will describe the experiment setup, results and error analysis. Finally, in
+        Chapters 6, we will discuss the results and conclude the work.
       </p>
       <h2>Contents</h2>
       <ul>
@@ -899,7 +897,7 @@
           </ul>
         </li>
         <li class="toc-h2 toc-active">
-          <a href="#toc5"> 5. Experimental Approach </a>
+          <a href="#toc5"> 5. Experimental Approach and Evaluation </a>
           <ul>
             <li>
               <a href="#toc5.1">5.1 Dataset</a>
@@ -2594,8 +2592,8 @@
         </table>
       </div>
 
-      <span id="toc5.2"></span>
-      <h3>5.2 Results of Different Hyperparameters</h3>
+      <span id="toc5.5"></span>
+      <h3>5.5 Results of Different Hyperparameters</h3>
       <p>
         This section describes the hyperparameter tuning results for selected
         serializations. We conducted preprocessing of fixing cell length in a
@@ -3276,8 +3274,8 @@
         </table>
       </div>
 
-      <span id="toc5.3"></span>
-      <h3>5.3 Error Analysis</h3>
+      <span id="toc5.6"></span>
+      <h3>5.6 Error Analysis</h3>
       <p>
         To evaluate the performance, we conducted error analysis on the
         Neighboring Column Serialization with window size of 2. We chose this
