proofread and small adjusments

--- a/submit/index.html
+++ b/submit/index.html
@@ -1569,9 +1569,8 @@
         with MP Ratios of 0.2, 0.5, and 0.8, respectively. For instance, the MP
         Ratio of 0.8 for Neighboring Column Serialization, for the CPA task,
         allocates 80% of the available token limit to the Main and Target
-        Columns and only 20% to their neighbors, Finally, in the early stages of
-        our workflow, we investigated the performance of augmentation strategies
-        on single-column serialization for the CPA task.
+        Columns and only 20% to their neighbors, Finally we investigate the
+        performance of different augmentation strategies
       </p>
 
       <span id="toc5"></span>
