adjust figure size

--- a/submit/index.html
+++ b/submit/index.html
@@ -1128,7 +1128,7 @@
 
       <span id="toc3.2.Fig"></span>
       <figure>
-        <img src="images/TURL.PNG" alt="TURL" class="center" width='100%' height='auto'/>
+        <img src="images/TURL.PNG" alt="TURL" width='50%' height='auto'/>
         <figcaption class="center">
           <b><a id="Fig2"></a>Figure 2:</b> Overview of TURL framework [<a href="#toc12">4</a>]
         </figcaption>
@@ -1167,7 +1167,7 @@
 
       <span id="toc3.4.Fig"></span>
       <figure>
-        <img src="images/DODUO.PNG" alt="DODUO" class="center" width='100%' height='auto'/>
+        <img src="images/DODUO.PNG" alt="DODUO" width='100%'/>
         <figcaption class="center">
           <b><a id="Fig3"></a>Figure 3:</b> Overview of DODUO's model architecture [<a href="#toc15">7</a>]
         </figcaption>
@@ -1198,7 +1198,7 @@
 
       <span id="toc3.5.Fig"></span>
       <figure>
-        <img src="images/TaBERT.JPG" alt="TaBERT framework" class="center" width='100%' height='auto'/>
+        <img src="images/TaBERT.JPG" alt="TaBERT framework" width='100%'/>
         <figcaption class="center">
           <b><a id="Fig4"></a>Figure 4:</b> Overview of TaBERT [<a
             href="#toc28"
