--- a/submit/index.html
+++ b/submit/index.html
@@ -1128,9 +1128,6 @@
 
       <span id="toc3.2.Fig"></span>
       <figure>
-<<<<<<< HEAD
-        <img src="images/TURL.PNG" alt="TURL" width='50%' height='auto'/>
-=======
         <img
           src="images/TURL.PNG"
           alt="TURL"
@@ -1138,7 +1135,6 @@
           width="100%"
           height="auto"
         />
->>>>>>> 01cbd1159bf8d776dc7606e57f36a6dfc5fceb59
         <figcaption class="center">
           <b><a id="Fig2"></a>Figure 2:</b> Overview of TURL framework [<a
             href="#toc12"
@@ -1194,9 +1190,6 @@
 
       <span id="toc3.4.Fig"></span>
       <figure>
-<<<<<<< HEAD
-        <img src="images/DODUO.PNG" alt="DODUO" width='100%'/>
-=======
         <img
           src="images/DODUO.PNG"
           alt="DODUO"
@@ -1204,7 +1197,6 @@
           width="100%"
           height="auto"
         />
->>>>>>> 01cbd1159bf8d776dc7606e57f36a6dfc5fceb59
         <figcaption class="center">
           <b><a id="Fig3"></a>Figure 3:</b> Overview of DODUO's model
           architecture [<a href="#toc15">7</a>]
@@ -1236,9 +1228,6 @@
 
       <span id="toc3.5.Fig"></span>
       <figure>
-<<<<<<< HEAD
-        <img src="images/TaBERT.JPG" alt="TaBERT framework" width='100%'/>
-=======
         <img
           src="images/TaBERT.JPG"
           alt="TaBERT framework"
@@ -1246,7 +1235,6 @@
           width="100%"
           height="auto"
         />
->>>>>>> 01cbd1159bf8d776dc7606e57f36a6dfc5fceb59
         <figcaption class="center">
           <b><a id="Fig4"></a>Figure 4:</b> Overview of TaBERT [<a href="#toc28"
             >20</a
@@ -3667,8 +3655,8 @@
         tasks. Specifically, we sampled 614 errors from a total of 1533
         observations for CTA, and 617 errors from 3853 observations for CPA. We
         manually checked these tables and classified the types of errors we
-        found, which are listed in <i>Table 8</i>. And the distribution of error
-        types in the samples are illustrated in <i>Figure 5</i>.
+        found, which are listed in <i>Table 8</i>. The distribution of error
+        types in the samples are illustrated in <a id='Fig9'>Figure 9</a>.
       </p>
       <div style="text-align: center; text-align: left" class="tg-wrap">
         <table>
