--- a/submit/index.html
+++ b/submit/index.html
@@ -881,10 +881,16 @@
             <li>
               <a href="#toc3.4">3.4 DODUO</a>
             </li>
+            <li>
+              <a href="#toc3.5">3.5 TaBERT</a>
+            </li>
+            <li>
+              <a href="#toc3.6">3.6 Dataset</a>
+            </li>
           </ul>
         </li>
         <li class="toc-h2 toc-active">
-          <a href="#toc4"> 4. Model </a>
+          <a href="#toc4"> 4. Methodology </a>
           <ul>
             <li>
               <a href="#toc4.1">4.1 Preprocessing and Augmentation</a>
@@ -893,7 +899,10 @@
               <a href="#toc4.2">4.2 Serialization</a>
             </li>
             <li>
-              <a href="#toc4.3">4.3 Further Models</a>
+              <a href="#toc4.3">4.3 Models</a>
+            </li>
+            <li>
+              <a href="#toc4.4">4.4 Hyperparameter Tuning </a>
             </li>
           </ul>
         </li>
@@ -901,30 +910,37 @@
           <a href="#toc5"> 5. Experimental Approach and Evaluation </a>
           <ul>
             <li>
-              <a href="#toc5.1">5.1 Dataset</a>
+              <a href="#toc5.1">5.1 Setup</a>
             </li>
             <li>
-              <a href="#toc5.2">5.2 Experimental Settings</a>
+              <a href="#toc5.2">5.2 Experiments for SOTAB benchmark</a>
             </li>
             <li>
-              <a href="#toc5.3">5.3 Experiments for SOTAB benchmark</a>
+              <a href="#toc5.3">5.3 Experiments for WikiTables dataset</a>
             </li>
             <li>
-              <a href="#toc5.4">5.4 Experiments for WikiTables dataset</a>
+              <a href="#toc5.4">5.4 Main Results</a>
+            </li>
+            <li>
+              <a href="#toc5.5">5.5 Results of Different Hyperparameters </a>
+            </li>
+
+            <li>
+              <a href="#toc5.6">5.6 Error Analysis </a>
             </li>
           </ul>
         </li>
         <li class="toc-h2 toc-active">
-          <a href="#toc6"> 6. Experimental Results and Error Analysis </a>
+          <a href="#toc6"> 6. Discussion and Conclusion </a>
           <ul>
             <li>
-              <a href="#toc6.1">6.1 Main Results</a>
+              <a href="#toc6.1">6.1 Discussion</a>
             </li>
             <li>
-              <a href="#toc6.2">6.2 Hyperparameter Tuning</a>
+              <a href="#toc6.2">6.2 Conclusion</a>
             </li>
             <li>
-              <a href="#toc6.3">6.3 Error Analysis</a>
+              <a href="#toc6.3">6.3 Acknowledgments</a>
             </li>
           </ul>
         </li>
@@ -984,7 +1000,7 @@
         <b
           >"hotel/name", "streetAddress","addressLocality", "Country", and
           "currency" </b
-        >[<a href="#toc9">1</a>] as shown in <a id="Fig1">Figure 1</a>. While data types
+        >[<a href="#toc9">1</a>] as shown in <i>Figure 1</i>. While data types
         provide basic information about the type of data stored in a column,
         entity types capture domain-specific semantics that convey more meaning.
         For instance, labeling a column with <b>"hotel/name"</b> rather than
@@ -1022,7 +1038,7 @@
         understanding [<a href="#toc17">7</a>]. It aims to identify semantic
         relationships between different columns in a table and can infer
         relationships that might not be immediately obvious. As illustrated in
-        <a id="Fig1">Figure 1</a>, CPA can help to infer that the <b>"address" </b>column
+        <i>Figure 1</i>, CPA can help to infer that the <b>"address" </b>column
         refers to the hotel's location.
       </p>
 
@@ -1112,7 +1128,8 @@
         The universal architecture of TURL facilitates its application in
         various downstream tasks, requiring only minimal task-specific
         modifications. For example, the TURL framework can be used to infer
-        valuable information about tables such as column types and the relationships between columns (CTA and CPA). The framework, as shown in
+        valuable information about tables such as column types and the
+        relationships between columns (CTA and CPA). The framework, as shown in
         <a id="Fig2">Figure 2</a>,is composed of three main components: an
         embedding layer that first converts input tables into embeddings, an
         N-stacked aware transformer layer that attends over these embeddings to
@@ -1190,6 +1207,9 @@
 
       <span id="toc3.4.Fig"></span>
       <figure>
+        <<<<<<< HEAD
+        <img src="images/DODUO.PNG" alt="DODUO" width="100%" />
+        =======
         <img
           src="images/DODUO.PNG"
           alt="DODUO"
@@ -1197,6 +1217,7 @@
           width="100%"
           height="auto"
         />
+        >>>>>>> 01cbd1159bf8d776dc7606e57f36a6dfc5fceb59
         <figcaption class="center">
           <b><a id="Fig3"></a>Figure 3:</b> Overview of DODUO's model
           architecture [<a href="#toc15">7</a>]
@@ -1228,6 +1249,9 @@
 
       <span id="toc3.5.Fig"></span>
       <figure>
+        <<<<<<< HEAD
+        <img src="images/TaBERT.JPG" alt="TaBERT framework" width="100%" />
+        =======
         <img
           src="images/TaBERT.JPG"
           alt="TaBERT framework"
@@ -1235,6 +1259,7 @@
           width="100%"
           height="auto"
         />
+        >>>>>>> 01cbd1159bf8d776dc7606e57f36a6dfc5fceb59
         <figcaption class="center">
           <b><a id="Fig4"></a>Figure 4:</b> Overview of TaBERT [<a href="#toc28"
             >20</a
@@ -1481,7 +1506,7 @@
         types in each cell, we introduce <em>Column-TaBERT Serialization</em>,
         which infers the data type for each column by majority count and
         includes the data types for each column only once. For the CTA task, the
-        resulting serialization is illustrated in <a id="Fig6">Figure 6</a> or:
+        resulting serialization is illustrated in <i>Figure 3</i> or:
         <span class="math display"
           >\[serialize_{col\_tabert}(C)::=
           [CLS]\;target\_col\_type\;target\_col\_data\;[SEP]\;context\_col\_1\_type\;context\_col\_2\_type\;...\;[SEP]\;row\_data\;[SEP]\]</span
@@ -1578,22 +1603,23 @@
       <p>
         To investigate the impact of different window sizes for Neighboring
         Column Serializations, we conduct hyperparameter tunings for both CTA
-        and CPA tasks. We also experiment with different preprocessing
-        methods, such as TUTA, median, and mean preprocessing for each promising
+        and CPA tasks. We also experiment with different preprocessing methods,
+        such as TUTA, median, and mean preprocessing for each promising
         serialization. Additionally, we vary the proportions of the target
         column and local context <i>(MP - Main Percentange Ratio)</i> to assess
         the effect of context weight on different serializations, experimenting
         with MP Ratios of 0.2, 0.5, and 0.8, respectively. For instance, the MP
         Ratio of 0.8 for Neighboring Column Serialization, for the CPA task,
         allocates 80% of the available token limit to the Main and Target
-        Columns and only 20% to their neighbors. Finally,  we investigate the
-        performance of different augmentation strategies. 
+        Columns and only 20% to their neighbors. Finally, we investigate the
+        performance of different augmentation strategies.
       </p>
 
       <span id="toc5"></span>
       <h2>5. Experimental Approach and Evaluation</h2>
       <p>
-        This Chapter describes our experimental setup, results and experimental evaluation.
+        This Chapter describes our experimental setup, results and experimental
+        evaluation.
       </p>
       <span id="toc5.1"></span>
       <h3>5.1 Setup</h3>
@@ -3655,8 +3681,8 @@
         tasks. Specifically, we sampled 614 errors from a total of 1533
         observations for CTA, and 617 errors from 3853 observations for CPA. We
         manually checked these tables and classified the types of errors we
-        found, which are listed in <i>Table 8</i>. The distribution of error
-        types in the samples are illustrated in <a id='Fig9'>Figure 9</a>.
+        found, which are listed in <i>Table 8</i>. And the distribution of error
+        types in the samples are illustrated in <i>Figure 5</i>.
       </p>
       <div style="text-align: center; text-align: left" class="tg-wrap">
         <table>
